--- a/smartlist.client/apps/smart-list-host/src/app/app.component.html
+++ b/smartlist.client/apps/smart-list-host/src/app/app.component.html
@@ -1,5 +1,8 @@
-<ul class="remote-menu">
+<nav class="remote-menu">
   <li><a routerLink="login">Login</a></li>
   <li><a routerLink="main">Smart List Main App</a></li>
-</ul>
-<router-outlet></router-outlet>
+</nav>
+<main>
+  <router-outlet />
+</main>
+
