--- a/smartlist.client/apps/smart-list-host/libs/features/feature-login/src/lib/components/login/login.component.html
+++ b/smartlist.client/apps/smart-list-host/libs/features/feature-login/src/lib/components/login/login.component.html
@@ -1,1 +1,9 @@
 <p>login works!</p>
+
+<p-button label="Login" (onClick)="login()"></p-button>
+
+<div>
+@if (loginResponse()) {
+  <code [innerHTML]="formattedJsonResponse()"></code>
+}
+</div>
